# xi-system

./: Cargo.toml
20fa0290-be2f-4c2d-b35c-804123d1cc24/: 20fa0290-be2f-4c2d-b35c-804123d1cc24.yaml  dockerfile
95e6c6cd-8b2e-4b79-b8b4-9d4854e21453/: 95e6c6cd-8b2e-4b79-b8b4-9d4854e21453  95e6c6cd-8b2e-4b79-b8b4-9d4854e21453.yaml  base_dockerfile  dockerfile
b69560cb-734f-4e6b-a736-9c9855021734/: b69560cb-734f-4e6b-a736-9c9855021734  b69560cb-734f-4e6b-a736-9c9855021734.yaml  dockerfile
html/: base_serving.yaml  filescan.html  index.html  mu.html  nu.html
src/: lib.rs
