[package]
name = "websrv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0.2"
lazy_static = "1.4.0"
regex = "1.0"
content_inspector = "0.2.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
mime = "0.3.16"
rand = "0.8.5"
wait-timeout = "0.1.5"